@@ -1,4 +1,4 @@
-# Config file for source_spec.py
+# Config file for source_spec
 
 # GENERAL PARAMETERS --------
 DEBUG = boolean(default=False) #True: print debug information
