@@ -20,6 +20,7 @@ v0.9 - 2016-XX-XX
   - Use by default a global model for theoretical travel time calculation
   - New options for P and S arrival time tolerance
 	- Use json format for traceid correction file
+  - Save config file to output dir (only for source_spec)
 	- Code cleaning and optimization:
 		- Switch from optparse (deprecated) to argparse
     - Code style fixes and refactoring
